--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ ul2{font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida
       height="50" 
       onMouseOver="this.src='http://imageshack.com/a/img921/8640/r7gPvN.png'"
       onMouseOut="this.src='http://imageshack.com/a/img924/4282/5CTicW.png'"
-      onClick="location='https://twitter.com/ChristianL_Grey'"
+      onClick="location='https://twitter.com/jailsonmreal'"
 
 
 >
