--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <link rel="shortcut icon" href="http://www.iconj.com/ico/g/c/gckw8yty7b.ico" type="image/x-icon" />
    <meta charset="UTF-8">
-    <title>Um carinha Qualquer</title>
+    <title>Manda Salv!</title>
    <meta charset='utf-8'/>
   </head>
 <style>
