--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
  <head>
@@ -7,6 +8,11 @@
    <meta charset='utf-8'/>
   </head>
 <style>
+
+*{
+  margin: 0;
+  padding: 0;
+ }
 
  header, footer { 
    padding: 1em;
@@ -18,32 +24,25 @@
 
  }
 
+ header{
+  height: 60px;
+ }
+
  footer {
    font-size: 15px;
    font-family: arial;
 
  }
 
- nav { 
-   float: left; 
-   max-width: 160px;
-   margin: 0;
-   padding: 2.5em;
+ nav{
+  width: 100%;
+  position: absolute;
+  top: 60px;
+}
 
-
- }
  
- nav ul {
-   list-style-type: none;
-   padding: 1;
-   font-size: 18px;
-   font-family: Trebuchet MS;
-   color: #dae9ed;
-   text-shadow: -1px 1px 2px #0c555b;
 
- }
-
- nav ul a { 
+ nav a { 
    text-decoration: none;
    color: #dae9ed
 
@@ -55,14 +54,16 @@
    font-family: Trebuchet MS;
    text-align: left;
    font-size: 17.3px;
-   text-shadow: -1px 1px 0.5px #0c555b
+   text-shadow: -1px 1px 0.5px #0c555b;
 
 
  }
 
  table {
    border-collapse: separate;
-   background-color: #2e97a0
+   background-color: #2e97a0;
+   margin-left: 436px;
+
  }
 
  th { 
@@ -80,17 +81,43 @@
  }
 
  article {
-   margin-left: 180px;
-   border-left: 1px ;
+   margin-left: 217px;
+   border-left: 10px ;
    padding: 2em;
-   padding-left: 2000px
    overflow:hidden;
+}
+
+.barra{
+  background-color: #0c555b;
+  height: 1200px;
+  width: 240px;
+  position: absolute;
+  transition: all .2s linear;
+  left: -300px;
+  top: 31.7px;
+}
+
+#check{
+  display: none; 
+}
+
+#icone{
+  cursor: pointer;
+  padding: 6px;
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  z-index: 1;  
+
 }
 
  .img {
    float: left;  
-   width: 190px;
-   height: 190px;
+   width: 178px;
+   height: 178px;
+   position: absolute;
+   top: 121px;
+   left: 259.5px;
 
  } 
 
@@ -103,15 +130,18 @@
    color:"F6F6F5";      
  }
 
-h1{
+div.titulo{
    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
-   font-size: 28px;
+   font-size: 20px;
    font-style: bold
    font-variant: bold
    font-weight: 500;
    line-height: 26.4px;
    color: #dae9ed;
    text-shadow: none;
+   position: relative;
+   top: -60px;
+   left: 350%;
  }
 
  h2{
@@ -136,17 +166,6 @@ h1{
 
  }
 
- p1 {
-   font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
-   font-size: 16px;
-   font-style: normal
-   font-variant: normal;
-   font-weight: 50;
-   line-height: 17px;
-   text-shadow: #4197af 0.01em 0.10em 0.5em;
-   color: #176377;
-
- }
 
  p2 {
    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
@@ -172,19 +191,20 @@ h1{
  ul{
    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
    font-size: 15px;
-   font-style: normal
+   font-style: normal;
    font-variant: normal;
    font-weight: 50;
    line-height: 17px;
    color: #176377;
    text-shadow: none;
+   list-style: none;
 
  }
 
  ul2{
    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
    font-size: 15px;
-   font-style: normal
+   font-style: normal;
    font-variant: normal;
    font-weight: 50;
    line-height: 17px;
@@ -192,20 +212,74 @@ h1{
    text-shadow: none;
 
  }
+
+ .ini{
+  background-color: #003438;
+  padding: 20px;
+  transition: all .2s linear;
+  font-family: Trebuchet MS;
+  color: white;
+  border-bottom: 2px solid #333;
+  color: #dae9ed;
+  font-weight: bold;
+}
+
+.link{
+  background-color: #0f7c84;
+  padding: 20px;
+  transition: all .2s linear;
+  font-family: Trebuchet MS;
+  color: #dae9ed;
+  border-bottom: 2px solid #333;
+
+}
+
+#check:checked ~ .barra{
+  transform: translateX(300px);
+}
+
+.rdc{ 
+   width: 50px;
+   height: 50px;
+   position: relative;
+   top: 0px;
+   left: 260px
+  
+   }
+
+ div.frase{
+  font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+   font-size: 16px;
+   font-style: normal;
+   font-variant: normal;
+   line-height: 17px;
+   text-shadow: #4197af 0.01em 0.10em 0.5em;
+   color: #176377;
+   line-height: 200%;
+ }  
+
+
 </style>
 
 <body>
-  <header><h1>Meu Mundo Minha Vida</h1></header>
+  <header></header>
+  <div class="titulo"><h1>Meu Mundo Minha Vida</h1></div>
+  <input type="checkbox" id="check">        
+<label id="icone" for="check"><img src="http://imageshack.com/a/img924/2333/n5i9jb.png"></label>
+  <div class="barra">
   <nav>
-   <ul>
-     <li><a href="https://sway.com/5qlN3HmqSwC3jsX9">Sobre Mim</a></li> 
-     <li>Habilidades</li>
-     <li>Blog</li> 
-     <li>Portifólio</li>
-     <li>Contato
+   <a href=""><div class="ini">Início</a></div>
+   <a href=""><div class="link">Portfólio</a></div>
+   <a href=""><div class="link">Contato</a></div>
+   <a href=""><div class="link">Habilidade</a></div>
+    
+
   </nav>
+
+</div>
+
   <img class="img" src="http://imageshack.com/a/img921/2231/tvkofE.png">
-  <table>
+  <table >
    <tr>
     <th>Nome</th>
     <td> Christian Lopes De Souza</td>
@@ -224,7 +298,7 @@ h1{
    </tr>
   </table>
   <aside>
-  <img src="http://imageshack.com/a/img924/4282/5CTicW.png"(twt)
+  <img class="rdc" src="http://imageshack.com/a/img924/4282/5CTicW.png"(twt)
       width="50"
       height="50" 
       onMouseOver="this.src='http://imageshack.com/a/img921/8640/r7gPvN.png'"
@@ -232,7 +306,7 @@ h1{
       onClick="location='https://twitter.com/ChristianL_Grey'"
   >
 
-  <img src="http://imageshack.com/a/img923/7249/aeiYqe.png"(face)
+  <img class="rdc" src="http://imageshack.com/a/img923/7249/aeiYqe.png"(face)
       width="50"
       height="50" 
       onMouseOver="this.src='http://imageshack.com/a/img921/6137/4Fux6T.png'"
@@ -240,7 +314,7 @@ h1{
       onClick="location='https://www.facebook.com/christian.lopes.94043'"
  >
 
-      <img src=http://imageshack.com/a/img922/1021/lFrvv2.png (insta)
+      <img class="rdc" src=http://imageshack.com/a/img922/1021/lFrvv2.png (insta)
        width="50"
        height="50" 
        onMouseOver="this.src='http://imageshack.com/a/img922/4062/g3B33C.png'"
@@ -254,9 +328,13 @@ h1{
   <iframe width="700" height="390" src="https://www.youtube.com/embed/826kv4IQSd4" frameborder="0" allowfullscreen></iframe>
 <br>
 
+  <div class="frase">
   <p1><i>"Quando você aponta 1 dedo pra alguém, 3 dedos apontam pra você "(Thiago Rachid)</p></i>
   <p1><i>"Uma Vida, Uma chance"(Zangado)</p></i>
   <p1><i>"Manda Salve" (Ian Zanon,2017)</p></i> 
+  </div>
+
+  <br><br>
 
  
  <h2 style="color:#5faabf">Informações Pessoais</h2>
