--- a/index.html
+++ b/index.html
@@ -133,15 +133,15 @@
 div.titulo{
    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
    font-size: 20px;
-   font-style: bold
-   font-variant: bold
+   font-style: bold;
+   font-variant: bold;
    font-weight: 500;
    line-height: 26.4px;
    color: #dae9ed;
    text-shadow: none;
    position: relative;
    top: -60px;
-   left: 350%;
+   left: 35%;
  }
 
  h2{
