--- a/index.html
+++ b/index.html
@@ -268,10 +268,10 @@ div.titulo{
 <label id="icone" for="check"><img src="http://imageshack.com/a/img924/2333/n5i9jb.png"></label>
   <div class="barra">
   <nav>
-   <a href=""><div class="ini">Início</a></div>
-   <a href=""><div class="link">Portfólio</a></div>
-   <a href=""><div class="link">Contato</a></div>
-   <a href=""><div class="link">Habilidade</a></div>
+   <a href="#"><div class="ini">Início</a></div>
+   <a href="https://christianlopess.github.io/kinsgar-portfolio/"><div class="link">Portfólio</a></div>
+   <a href="#"><div class="link">Contato</a></div>
+   <a href="#"><div class="link">Habilidade</a></div>
     
 
   </nav>
