--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
  <head>
+  <link rel="link rel="stylesheet" href="nomedoarquivo.css">
   <link rel="shortcut icon" href="http://www.iconj.com/ico/g/c/gckw8yty7b.ico" type="image/x-icon" />
    <meta charset="UTF-8">
     <title>Manda Salv!</title>
